Wed Feb 18 14:27:08 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gdk/gdkwindow.c (gdk_window_get_composite_drawable): Reset clip
	region back to NULL on cached GC (rest of #134728)

Wed Feb 18 13:28:57 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	Fix bug reported by Nam SungHyun (#134728)
	
	* gdk/gdkpixbuf-render.c (gdk_pixbuf_render_threshold_alpha):
	Don't use a cached GC here since the function needs to modify the
	foreground color.

	* gdk/gdkwindow.c (gdk_window_end_paint): Reset clip region back
	to NULL on the cached GC.

2004-02-17  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdialog.c
	(gtk_file_chooser_dialog_style_set): Use HIG-compliant spacings.
	This sucks a lot.

Wed Feb 18 02:03:47 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktextbuffer.c (gtk_text_buffer_class_init): Document some
	peculiarities of the ::delete_range signal.  (#132135, Grant Gayed)

Wed Feb 18 01:44:59 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	GC caching, bug #125645 (based on patch by Brian Cameron)
	
	* gdk/gdkscreen.h (struct _GdkScreen): Add GC cache
	* gdk/gdkscreen.c (gdk_screen_dispose): New function. Unref the
	cached GC's here.
	* gdk/gdkdraw.c (_gdk_drawable_get_scratch_gc): New function to
	get a scratch gc.
	* gdk/gdkinternals.h: Declare the function here

	* gdk/gdkdraw.c (gdk_drawable_real_draw_pixbuf): Use
	_gdk_drawable_get_scratch_gc() instead of creating a new GC.
	* gdk/x11/gdkgeometry-x11.c (gdk_window_copy_area_scroll): same
	* gdk/x11/gdkdrawable-x11.c (draw_with_images): same
	* gdk/gdkwindow.c (gdk_window_get_composite_drawable): same
	* gdk/gdkwindow.c (gdk_window_end_paint): same
	* gdk/gdkpixmap.c (gdk_pixmap_colormap_new_from_pixbuf): same
	* gdk/gdkpixbuf-render.c (gdk_pixbuf_render_threshold_alpha): same
	* gdk/gdkpixbuf-render.c (gdk_pixbuf_render_pixmap_and_mask_for_colormap): same

Tue Feb 17 23:28:33 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkmenu.c (gtk_menu_init): ...and don't forget to initalize